# MMIC

./: .gitignore
Phase 2/: .env
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: agent_log.py  alerts.py  credit.py  health.py  monitoring.py  overview.py  router.py  scoring.py
backend/app/core/: config.py
backend/app/ml/: credit_scorer.py  fraud_features.py  fraud_scorer.py  loader.py
backend/app/schemas/: ops.py
backend/app/services/: data_store.py
model_training/: requirements.txt
model_training/data/: README.md
model_training/notebooks/: 01_fraud_eda.ipynb  02_credit_eda2.ipynb
model_training/src/: prepare_credit_data.py  prepare_gmsc_credit_data.py  prepare_ieee_fraud_data.py  train_credit_scorecard.py  train_fraud_model.py
sentinel-insight-desk/: package-lock.json  vite.config.ts
sentinel-insight-desk/src/: routeTree.gen.ts  styles.css
sentinel-insight-desk/src/components/layout/: AppShell.tsx
sentinel-insight-desk/src/components/ui/: checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input-otp.tsx  input.tsx  label.tsx  menubar.tsx  radio-group.tsx  select.tsx  sidebar.tsx  switch.tsx  textarea.tsx
sentinel-insight-desk/src/lib/: error-page.ts  mockData.ts
sentinel-insight-desk/src/lib/api/: client.ts  data.ts  types.ts
sentinel-insight-desk/src/routes/: __root.tsx  agent-log.tsx  alerts.$id.tsx  alerts.index.tsx  alerts.tsx  credit.tsx  graph.tsx  index.tsx  monitoring.tsx
