[project]
name = "mmmic-backend"
version = "0.1.0"
description = "Sentinel Risk Ops API — fraud and credit operations backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-dotenv",
    "joblib",
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "optbinning",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
